kata and tag model

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link nav-text fw-bold" href="{% url 'subjects' %}">Subjects</a></span>
+            <a class="nav-link nav-text fw-bold" href="{% url 'tags' %}">Tags</a></span>
             </li>
 
             <li class="nav-item d-md-none">
@@ -43,10 +43,10 @@
             <a class="nav-link nav-text fw-bold" href="{% url 'create-kata' %}">Add Kata</a>
             </li>  
             <li class="nav-item d-md-none">
-            <a class="nav-link nav-text fw-bold" href="#">Add Subject</a>
+            <a class="nav-link nav-text fw-bold" href="#">Add Tag</a>
             </li>
             <li class="nav-item d-none d-md-inline">
-            <a class="nav-link nav-text fw-bold" href="{% url 'create-subject' %}">Add Subject</a>
+            <a class="nav-link nav-text fw-bold" href="{% url 'create-tag' %}">Add Tag</a>
             </li>  
             
             <li class="nav-item">
