--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
     
   </head>
   <body>
-    {% comment %} {% include 'navbar.html' %} {% endcomment %}
+    {% include 'navbar.html' %} 
    
     {% block messages %}
         <ul class="fmessages" id="messages-list">
